# llm-prompt

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.assets/tapes/: demo.tape
.github/workflows/: nix-flake-check.yaml  python-publish-package.yaml  python-test-package.yaml
llm_prompt/: __init__.py
llm_repl/: __init__.py
